--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^7.0.0",
     "env": "0.0.2",
     "express": "^4.16.4",
+    "express-device": "^0.4.2",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
+    "express-useragent": "^1.0.13",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
@@ -30,6 +32,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
+    "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "pug": "^2.0.4",
     "sharp": "^0.25.2",
